# BOMGuard

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/bomguard/: __init__.py  celery_app.py  config.py  db.py  main.py  metrics.py  seed.py  websocket.py
backend/bomguard/api/: admin.py  ask.py  auth.py  boms.py  chat.py  enrichment.py  regulations.py  scan.py  substances.py
backend/bomguard/enrichment/: __init__.py  fingerprints.py  pipeline.py  summary_tasks.py  tasks.py
backend/bomguard/ingestion/: base.py  pipeline.py  registry.py  static_scraper.py  tasks.py
backend/bomguard/ml/: evaluate.py  explainability.py  tasks.py
backend/bomguard/models/: __init__.py  database.py  schemas.py
backend/bomguard/services/: auth_service.py  bom_parser.py  bom_substances.py  cn_rohs_scraper.py  compliance_scanner.py  echa_scraper.py  epa_client.py  llm_service.py  openrouter_client.py  pubchem_client.py  rohs_scraper.py  summary_generator.py  tsca_scraper.py  us_pfas_scraper.py  validator.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0e4b06a15cc9_add_chat_threads_and_messages.py  69fdaf6f09a6_add_ml_risk_score_columns_to_scan_.py  9f1d5a38fef5_add_users_and_user_preferences_tables.py
backend/tests/: conftest.py  test_health.py
backend/tests/test_api/: test_admin.py  test_ask_api.py  test_auth_api.py  test_websocket_alerts.py
backend/tests/test_boms/: test_bom_parser.py  test_boms_api.py
backend/tests/test_enrichment/: test_enrichment_pipeline.py  test_epa_client.py  test_fingerprints.py  test_pubchem_client.py
backend/tests/test_ingestion/: test_cn_rohs_scraper.py  test_echa_scraper.py  test_pipeline.py  test_registry.py  test_rohs_scraper.py  test_static_scraper.py  test_tsca_scraper.py  test_us_pfas_scraper.py
backend/tests/test_ml/: test_placeholder.py  test_shap.py  test_training.py
backend/tests/test_scan/: test_scan_api.py
backend/tests/test_scanner/: test_compliance_scanner.py
backend/tests/test_services/: test_auth_service.py  test_openrouter_client.py
frontend/: .prettierrc  (+9 more)
(+91 files in other folders)
