[project]
name = "bomguard"
version = "0.1.0"
description = "BOM compliance scanner with ML risk prediction and LLM RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "xgboost>=2.1.0",
    "optuna>=4.1.0",
    "shap>=0.46.0",
    "numba>=0.58.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.19.0",
    "google-generativeai>=0.8.0",
    "pgvector>=0.3.0",
    "evidently>=0.5.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.19",
    "openpyxl>=3.1.0",
    "rdkit>=2024.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations", "alembic.ini"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG",
    "PIE", "TCH", "TID", "Q", "RET", "SLF", "SLOT",
]
ignore = ["E501", "ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["bomguard"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["X", "y", "X_train", "X_test", "X_sample"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
